--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "source": [
+    "# code for autoreload of modules\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-04T15:10:43.882018Z",
+     "start_time": "2025-03-04T15:10:43.737667Z"
+    }
+   },
+   "id": "20a284b51db49046",
    "outputs": [
     {
      "name": "stdout",
@@ -13,57 +25,48 @@
      ]
     }
    ],
+   "execution_count": 82
+  },
+  {
+   "cell_type": "code",
    "source": [
-    "# code for autoreload of modules\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "import os\n",
+    "from src.utils import set_random_seed"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-18T16:42:25.454616200Z",
-     "start_time": "2025-02-18T16:42:25.277337100Z"
+     "end_time": "2025-03-04T15:10:44.023360Z",
+     "start_time": "2025-03-04T15:10:43.886961Z"
     }
    },
-   "id": "20a284b51db49046"
+   "id": "initial_id",
+   "outputs": [],
+   "execution_count": 83
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
    "source": [
-    "import os\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-02-18T16:42:25.546615800Z",
-     "start_time": "2025-02-18T16:42:25.455616800Z"
-    }
-   },
-   "id": "initial_id"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
     "DIR = r'C:\\Users\\u0148775\\PycharmProjects\\CreditScoring'\n",
-    "os.chdir(DIR)\n"
+    "os.chdir(DIR)\n",
+    "\n",
+    "set_random_seed(0)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-18T16:42:25.640469100Z",
-     "start_time": "2025-02-18T16:42:25.546615800Z"
+     "end_time": "2025-03-04T15:10:44.193313Z",
+     "start_time": "2025-03-04T15:10:44.055842Z"
     }
    },
-   "id": "3115e454e894e990"
+   "id": "3115e454e894e990",
+   "outputs": [],
+   "execution_count": 84
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
    "source": [
     "from src.utils import load_config\n",
     "\n",
@@ -78,28 +81,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-18T16:42:25.750467400Z",
-     "start_time": "2025-02-18T16:42:25.642467400Z"
+     "end_time": "2025-03-04T15:10:44.379276Z",
+     "start_time": "2025-03-04T15:10:44.226312Z"
     }
    },
-   "id": "a08305fa84180327"
+   "id": "a08305fa84180327",
+   "outputs": [],
+   "execution_count": 85
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Experiment created at:  2025-02-18-17-42\n",
-      "Task: pd\n",
-      "Dataset: 03_vehicle_loan\n",
-      "CV splits:  2\n"
-     ]
-    }
-   ],
    "source": [
     "from src.classes.experiment import Experiment\n",
     "\n",
@@ -112,24 +103,48 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-18T16:42:25.861467100Z",
-     "start_time": "2025-02-18T16:42:25.753472Z"
+     "end_time": "2025-03-04T15:10:44.547337Z",
+     "start_time": "2025-03-04T15:10:44.411274Z"
     }
    },
-   "id": "d7ada7e1194abf9b"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "id": "d7ada7e1194abf9b",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "03_vehicle_loan loaded\n",
-      "03_vehicle_loan preprocessed\n",
-      "x shape:  (233154, 33)\n",
-      "y shape:  (233154,)\n"
+      "\n",
+      "Experiment created at:  2025-03-04-16-10\n",
+      "Task: pd\n",
+      "Dataset: 00_pd_toydata\n",
+      "CV splits:  2\n"
+     ]
+    }
+   ],
+   "execution_count": 86
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "experiment.run()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-04T15:10:45.749579Z",
+     "start_time": "2025-03-04T15:10:44.581215Z"
+    }
+   },
+   "id": "57033baf67309b3f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00_pd_toydata loaded\n",
+      "00_pd_toydata preprocessed\n",
+      "x shape:  (569, 30)\n",
+      "y shape:  (569,)\n"
      ]
     },
     {
@@ -143,85 +158,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Omitting rows with missing values: 7661 rows left out\n",
-      "*Best hyperparameters (dt)* {'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'entropy', 'max_depth': 20, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'monotonic_cst': None, 'random_state': None, 'splitter': 'best'}\n",
-      "*Best hyperparameters (lgbm)* {'boosting_type': 'gbdt', 'class_weight': None, 'colsample_bytree': 1.0, 'importance_type': 'split', 'learning_rate': 0.1, 'max_depth': -1, 'min_child_samples': 20, 'min_child_weight': 0.001, 'min_split_gain': 0.0, 'n_estimators': 50, 'n_jobs': None, 'num_leaves': 31, 'objective': None, 'random_state': None, 'reg_alpha': 0.0, 'reg_lambda': 0.0, 'subsample': 1.0, 'subsample_for_bin': 200000, 'subsample_freq': 0, 'verbose': -1}\n"
+      "- Imputed missing values with mean\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cross-validation loop::  50%|█████     | 1/2 [00:07<00:07,  7.16s/it]"
+      "Cross-validation loop::  50%|█████     | 1/2 [00:00<00:00,  2.00it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Omitting rows with missing values: 7661 rows left out\n",
-      "*Best hyperparameters (dt)* {'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'entropy', 'max_depth': 20, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'monotonic_cst': None, 'random_state': None, 'splitter': 'best'}\n",
-      "*Best hyperparameters (lgbm)* {'boosting_type': 'gbdt', 'class_weight': None, 'colsample_bytree': 1.0, 'importance_type': 'split', 'learning_rate': 0.1, 'max_depth': -1, 'min_child_samples': 20, 'min_child_weight': 0.001, 'min_split_gain': 0.0, 'n_estimators': 100, 'n_jobs': None, 'num_leaves': 31, 'objective': None, 'random_state': None, 'reg_alpha': 0.0, 'reg_lambda': 0.0, 'subsample': 1.0, 'subsample_for_bin': 200000, 'subsample_freq': 0, 'verbose': -1}\n"
+      "*Best hyperparameters (ann)* {'activation': 'relu', 'batch_size': 256, 'dropout_rate': 0.1, 'early_stopping_delay': 5, 'epochs': 50, 'hidden_layer_size': 32, 'learning_rate': 0.001, 'num_hidden_layers': 1, 'random_seed': 0, 'weight_decay': 0.01}\n",
+      "- Imputed missing values with mean\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cross-validation loop:: 100%|██████████| 2/2 [00:14<00:00,  7.31s/it]\n"
+      "Cross-validation loop:: 100%|██████████| 2/2 [00:01<00:00,  1.96it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*Best hyperparameters (ann)* {'activation': 'relu', 'batch_size': 256, 'dropout_rate': 0.1, 'early_stopping_delay': 5, 'epochs': 50, 'hidden_layer_size': 32, 'learning_rate': 0.001, 'num_hidden_layers': 1, 'random_seed': 0, 'weight_decay': 0.01}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
-   "source": [
-    "experiment.run()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-02-18T16:42:42.139602800Z",
-     "start_time": "2025-02-18T16:42:25.862471Z"
-    }
-   },
-   "id": "57033baf67309b3f"
+   "execution_count": 87
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'dt': {0: {'accuracy': 0.73383,\n   'brier': 0.23627,\n   'f1': 0.1819,\n   'precision': 0.27361,\n   'recall': 0.27361,\n   'aucroc': 0.51794,\n   'aucpr': 0.22488},\n  1: {'accuracy': 0.73635,\n   'brier': 0.22867,\n   'f1': 0.16975,\n   'precision': 0.26833,\n   'recall': 0.26833,\n   'aucroc': 0.51513,\n   'aucpr': 0.22347}},\n 'lgbm': {0: {'accuracy': 0.78292,\n   'brier': 0.16196,\n   'f1': 0.01425,\n   'precision': 0.51906,\n   'recall': 0.51906,\n   'aucroc': 0.50268,\n   'aucpr': 0.21938},\n  1: {'accuracy': 0.78254,\n   'brier': 0.16225,\n   'f1': 0.02312,\n   'precision': 0.4685,\n   'recall': 0.4685,\n   'aucroc': 0.50406,\n   'aucpr': 0.22009}}}"
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "experiment.results"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-18T16:42:52.425930600Z",
-     "start_time": "2025-02-18T16:42:52.340931700Z"
+     "end_time": "2025-03-04T15:10:46.000486Z",
+     "start_time": "2025-03-04T15:10:45.844413Z"
     }
    },
-   "id": "dc04285e5a4ef64"
+   "id": "dc04285e5a4ef64",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ann': {0: {'accuracy': 0.87368,\n",
+       "   'brier': 0.21303,\n",
+       "   'f1': 0.89474,\n",
+       "   'precision': 0.96835,\n",
+       "   'recall': 0.96835,\n",
+       "   'aucroc': 0.89101,\n",
+       "   'aucpr': 0.91398},\n",
+       "  1: {'accuracy': 0.80282,\n",
+       "   'brier': 0.20598,\n",
+       "   'f1': 0.81579,\n",
+       "   'precision': 0.94656,\n",
+       "   'recall': 0.94656,\n",
+       "   'aucroc': 0.82685,\n",
+       "   'aucpr': 0.851}}}"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 88
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-18T16:42:42.276295400Z",
-     "start_time": "2025-02-18T16:42:42.232952600Z"
+     "end_time": "2025-03-04T15:10:46.094779Z",
+     "start_time": "2025-03-04T15:10:46.078144Z"
     }
    },
-   "id": "ae32a86f8385f61e"
+   "cell_type": "code",
+   "source": "",
+   "id": "850cc3c1189e1a94",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
