extra pd datasets preprocessed

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -10,8 +10,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-12T14:44:14.349550Z",
-     "start_time": "2025-03-12T14:44:14.335081Z"
+     "end_time": "2025-03-14T15:20:31.375173Z",
+     "start_time": "2025-03-14T15:20:31.369170Z"
     }
    },
    "id": "20a284b51db49046",
@@ -27,8 +27,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-12T14:44:17.561379Z",
-     "start_time": "2025-03-12T14:44:14.359460Z"
+     "end_time": "2025-03-14T15:20:33.265740Z",
+     "start_time": "2025-03-14T15:20:31.380174Z"
     }
    },
    "id": "initial_id",
@@ -48,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-12T14:44:17.792377Z",
-     "start_time": "2025-03-12T14:44:17.733379Z"
+     "end_time": "2025-03-14T15:20:33.468367Z",
+     "start_time": "2025-03-14T15:20:33.454367Z"
     }
    },
    "id": "3115e454e894e990",
@@ -72,8 +72,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-12T14:44:17.853378Z",
-     "start_time": "2025-03-12T14:44:17.809378Z"
+     "end_time": "2025-03-14T15:20:33.515365Z",
+     "start_time": "2025-03-14T15:20:33.486368Z"
     }
    },
    "id": "a08305fa84180327",
@@ -94,8 +94,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-12T14:44:22.566410Z",
-     "start_time": "2025-03-12T14:44:17.871379Z"
+     "end_time": "2025-03-14T15:20:35.905701Z",
+     "start_time": "2025-03-14T15:20:33.532366Z"
     }
    },
    "id": "d7ada7e1194abf9b",
@@ -105,9 +105,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Experiment created at:  2025-03-12-15-44\n",
+      "Experiment created at:  2025-03-14-16-20\n",
       "Task: pd\n",
-      "Dataset: 14_german_credit\n",
+      "Dataset: 22_bank_status\n",
       "CV splits:  2\n"
      ]
     }
@@ -122,8 +122,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-12T14:44:22.719767Z",
-     "start_time": "2025-03-12T14:44:22.642412Z"
+     "end_time": "2025-03-14T15:20:38.329026Z",
+     "start_time": "2025-03-14T15:20:35.983620Z"
     }
    },
    "id": "57033baf67309b3f",
@@ -132,25 +132,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14_german_credit loaded\n",
-      "14_german_credit preprocessed\n",
-      "x shape:  (999, 20)\n",
-      "y shape:  (999,)\n"
+      "22_bank_status preprocessed\n",
+      "x shape:  (100000, 16)\n",
+      "y shape:  (100000,)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cross-validation loop:: 100%|██████████| 2/2 [00:00<00:00, 41.67it/s]"
+      "Cross-validation loop::   0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Imputed missing values with (num: median) and (cat: mode)\n",
-      "*Best hyperparameters (dt)* {'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 10, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'monotonic_cst': None, 'random_state': None, 'splitter': 'best'}\n",
       "- Imputed missing values with (num: median) and (cat: mode)\n",
       "*Best hyperparameters (dt)* {'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 10, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'monotonic_cst': None, 'random_state': None, 'splitter': 'best'}\n"
      ]
@@ -159,7 +156,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "Cross-validation loop::  50%|█████     | 1/2 [00:00<00:00,  1.10it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Imputed missing values with (num: median) and (cat: mode)\n",
+      "*Best hyperparameters (dt)* {'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 10, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'monotonic_cst': None, 'random_state': None, 'splitter': 'best'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation loop:: 100%|██████████| 2/2 [00:01<00:00,  1.06it/s]\n"
      ]
     }
    ],
@@ -173,8 +185,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-12T14:44:22.749770Z",
-     "start_time": "2025-03-12T14:44:22.736769Z"
+     "end_time": "2025-03-14T15:20:38.361028Z",
+     "start_time": "2025-03-14T15:20:38.347026Z"
     }
    },
    "id": "dc04285e5a4ef64",
@@ -182,22 +194,22 @@
     {
      "data": {
       "text/plain": [
-       "{'dt': {0: {'accuracy': 0.656,\n",
-       "   'brier': 0.33844,\n",
-       "   'f1': 0.41497,\n",
-       "   'precision': 0.4094,\n",
-       "   'recall': 0.4094,\n",
-       "   'h_measure': 0.04081,\n",
-       "   'aucroc': 0.5864,\n",
-       "   'aucpr': 0.34023},\n",
-       "  1: {'accuracy': 0.66733,\n",
-       "   'brier': 0.32682,\n",
-       "   'f1': 0.45033,\n",
-       "   'precision': 0.46259,\n",
-       "   'recall': 0.46259,\n",
-       "   'h_measure': 0.06044,\n",
-       "   'aucroc': 0.60453,\n",
-       "   'aucpr': 0.37729}}}"
+       "{'dt': {0: {'accuracy': 0.8092,\n",
+       "   'brier': 0.14551,\n",
+       "   'f1': 0.37525,\n",
+       "   'precision': 0.72771,\n",
+       "   'recall': 0.72771,\n",
+       "   'h_measure': 0.14559,\n",
+       "   'aucroc': 0.61254,\n",
+       "   'aucpr': 0.35333},\n",
+       "  1: {'accuracy': 0.80968,\n",
+       "   'brier': 0.14566,\n",
+       "   'f1': 0.34938,\n",
+       "   'precision': 0.76958,\n",
+       "   'recall': 0.76958,\n",
+       "   'h_measure': 0.13712,\n",
+       "   'aucroc': 0.60311,\n",
+       "   'aucpr': 0.34893}}}"
       ]
      },
      "execution_count": 7,
@@ -210,8 +222,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-12T14:44:22.780766Z",
-     "start_time": "2025-03-12T14:44:22.767767Z"
+     "end_time": "2025-03-14T15:20:38.408026Z",
+     "start_time": "2025-03-14T15:20:38.391026Z"
     }
    },
    "cell_type": "code",
